# aml-ccd

./: README.md  pyproject.toml
ccd/algorithm/: ccd.py
ccd/datasets/: real.py  synthetic.py
ccd/experiments/: benchmark.ipynb  benchmark.py  coefficients-sklearn.txt  coefficients.txt  evaluation.py  synthetic_experiments.ipynb
ccd/tests/: test_algorithm.py  test_datasets.py  test_experiments.py
