[project]
name = "aml-ccd"
version = "0.1.0"
description = "Cyclic Coordinate Descent algorithm implementation for parameter estimation in regularized logistic regression with l1 (lasso) penalty."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
